{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 181,
  "lineage": "428f3f7e-23ca-14d9-799d-a7b6c67f6a25",
  "resources": [
    {
      "module": "module.albc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:vpc/vpc-094d2d308d7f57b34",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-060ae989983407a82",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1a4ec660",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-094d2d308d7f57b34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e74fd7650e92b40d",
            "owner_id": "023980798539",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-vpc",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aws_observability",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aws-observability",
            "metadata": [
              {
                "annotations": {
                  "name": "aws-observability"
                },
                "generation": 0,
                "labels": {
                  "aws-observability": "enabled"
                },
                "name": "aws-observability",
                "resource_version": "3792",
                "uid": "e76adbea-4bbe-4d29-85a6-86633a65c80b"
              }
            ]
          },
          "dependencies": [
            "module.eks.data.aws_eks_cluster.cluster",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.eks.aws_iam_role.eks_cluster_role"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "dev",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dev",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "lcms"
                },
                "name": "dev",
                "resource_version": "1198",
                "uid": "14917bdb-fa90-4829-b418-47abe52ed9be"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.data.aws_eks_cluster.cluster",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "qa",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "qa",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "lcms"
                },
                "name": "qa",
                "resource_version": "1199",
                "uid": "e7b1f786-f923-40d6-93c0-2d6c21aab9e9"
              }
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.data.aws_eks_cluster.cluster",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "stage",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "stage",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "lcms"
                },
                "name": "stage",
                "resource_version": "1197",
                "uid": "9f887229-d965-4622-99e9-12caed45c04e"
              }
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.data.aws_eks_cluster.cluster",
            "module.vpc.aws_subnet.private",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.data.aws_eks_cluster_auth.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dev",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dev/lcms-api",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-internal": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb-ip"
                },
                "generation": 0,
                "name": "lcms-api",
                "namespace": "dev",
                "resource_version": "1637",
                "uid": "24ecb29d-3dd1-4ade-9f0e-d63c90189695"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.247.121",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "lcms-port",
                    "node_port": 30089,
                    "port": 8085,
                    "protocol": "TCP",
                    "target_port": "8085"
                  },
                  {
                    "name": "nginx-port",
                    "node_port": 31972,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "lcms"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.kubernetes_deployment.dev",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.vpc.aws_subnet.private",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.hpa",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "metrics_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/metrics-server",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "cookielab.io/terraform-module": "metrics-server",
                  "kubernetes.io/cluster-service": "true",
                  "kubernetes.io/name": "Metrics-server"
                },
                "name": "metrics-server",
                "namespace": "kube-system",
                "resource_version": "5335",
                "uid": "3ce563e3-6211-4950-ace0-e6edf15045f8"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.96.150",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "main-port"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "cookielab.io/application": "metrics-server",
                  "cookielab.io/process": "bootstrap"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:security-group/sg-043c75c5437c46c2d",
            "description": "Allow kubernetes custer traffic only",
            "egress": [],
            "id": "sg-043c75c5437c46c2d",
            "ingress": [],
            "name": "aakash-test-player-prod-db-sg",
            "name_prefix": "",
            "owner_id": "023980798539",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e0be8c43ed34abc",
            "domain": "vpc",
            "id": "eipalloc-0da01fdedcfa58ad2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d06e71bdd00e6f7a",
            "private_dns": "ip-10-0-21-170.ec2.internal",
            "private_ip": "10.0.21.170",
            "public_dns": "ec2-44-199-24-140.compute-1.amazonaws.com",
            "public_ip": "44.199.24.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-001",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-001",
              "Product": "aakash-test-player"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cd49ca6edf6a4439",
            "domain": "vpc",
            "id": "eipalloc-0d0cd0ac3ab6e9610",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e21267c1c2b80bc",
            "private_dns": "ip-10-0-58-248.ec2.internal",
            "private_ip": "10.0.58.248",
            "public_dns": "ec2-52-6-24-170.compute-1.amazonaws.com",
            "public_ip": "52.6.24.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-002",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-002",
              "Product": "aakash-test-player"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-035583b6c329dd8cc",
            "domain": "vpc",
            "id": "eipalloc-0aacd0e695cb91067",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0640b96be7b70272d",
            "private_dns": "ip-10-0-81-186.ec2.internal",
            "private_ip": "10.0.81.186",
            "public_dns": "ec2-54-156-50-206.compute-1.amazonaws.com",
            "public_ip": "54.156.50.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-003",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-eip-003",
              "Product": "aakash-test-player"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:internet-gateway/igw-03211ee3a43c2b657",
            "id": "igw-03211ee3a43c2b657",
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-igw",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-igw",
              "Product": "aakash-test-player"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da01fdedcfa58ad2",
            "connectivity_type": "public",
            "id": "nat-06d8fad651219af87",
            "network_interface_id": "eni-0d06e71bdd00e6f7a",
            "private_ip": "10.0.21.170",
            "public_ip": "44.199.24.140",
            "subnet_id": "subnet-0ab41ed21ab62c5f4",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-001",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-001",
              "Product": "aakash-test-player"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0cd0ac3ab6e9610",
            "connectivity_type": "public",
            "id": "nat-095d099872db316c4",
            "network_interface_id": "eni-08e21267c1c2b80bc",
            "private_ip": "10.0.58.248",
            "public_ip": "52.6.24.170",
            "subnet_id": "subnet-09ef486caf532fed7",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-002",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-002",
              "Product": "aakash-test-player"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aacd0e695cb91067",
            "connectivity_type": "public",
            "id": "nat-0d029361f470fa519",
            "network_interface_id": "eni-0640b96be7b70272d",
            "private_ip": "10.0.81.186",
            "public_ip": "54.156.50.206",
            "subnet_id": "subnet-09daa187506568c68",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-003",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-nat-003",
              "Product": "aakash-test-player"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cbbb73814a1c2b7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d8fad651219af87",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbbb73814a1c2b7e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ae68a05ae81993cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-095d099872db316c4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae68a05ae81993cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-009d39445358db8811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d029361f470fa519",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009d39445358db881",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03211ee3a43c2b657",
            "id": "r-rtb-03dd9b83a758726541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03dd9b83a75872654",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:route-table/rtb-0cbbb73814a1c2b7e",
            "id": "rtb-0cbbb73814a1c2b7e",
            "owner_id": "023980798539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d8fad651219af87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-001",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-001",
              "Product": "aakash-test-player"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:route-table/rtb-0ae68a05ae81993cc",
            "id": "rtb-0ae68a05ae81993cc",
            "owner_id": "023980798539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095d099872db316c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-002",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-002",
              "Product": "aakash-test-player"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:route-table/rtb-009d39445358db881",
            "id": "rtb-009d39445358db881",
            "owner_id": "023980798539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d029361f470fa519",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-003",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-private-003",
              "Product": "aakash-test-player"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:route-table/rtb-03dd9b83a75872654",
            "id": "rtb-03dd9b83a75872654",
            "owner_id": "023980798539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03211ee3a43c2b657",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-public",
              "Product": "aakash-test-player"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-routing-table-public",
              "Product": "aakash-test-player"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd019e09d8881215",
            "route_table_id": "rtb-0cbbb73814a1c2b7e",
            "subnet_id": "subnet-0ee01b0b258cf1d4e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebeb804680fdcc97",
            "route_table_id": "rtb-0ae68a05ae81993cc",
            "subnet_id": "subnet-070239a243c082899"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c744e88b36ddfa7e",
            "route_table_id": "rtb-009d39445358db881",
            "subnet_id": "subnet-0ed3b9e9704005f5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d40ac10f6569ecb5",
            "route_table_id": "rtb-03dd9b83a75872654",
            "subnet_id": "subnet-0ab41ed21ab62c5f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd40de68abb1711",
            "route_table_id": "rtb-03dd9b83a75872654",
            "subnet_id": "subnet-09ef486caf532fed7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd79f500f73ab988",
            "route_table_id": "rtb-03dd9b83a75872654",
            "subnet_id": "subnet-09daa187506568c68"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-0ee01b0b258cf1d4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0ee01b0b258cf1d4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-001",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-001",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-070239a243c082899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-070239a243c082899",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-002",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-002",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-0ed3b9e9704005f5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-0ed3b9e9704005f5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-003",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-private-subnet-003",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-0ab41ed21ab62c5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0ab41ed21ab62c5f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-001",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-001",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-09ef486caf532fed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-09ef486caf532fed7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-002",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-002",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:subnet/subnet-09daa187506568c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-09daa187506568c68",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-003",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-public-subnet-003",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094d2d308d7f57b34"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023980798539:vpc/vpc-094d2d308d7f57b34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031e1af508cc0b915",
            "default_route_table_id": "rtb-0e74fd7650e92b40d",
            "default_security_group_id": "sg-04adbadbdf160969d",
            "dhcp_options_id": "dopt-1a4ec660",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-094d2d308d7f57b34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e74fd7650e92b40d",
            "owner_id": "023980798539",
            "tags": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-vpc",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "aakash-test-player-prod-vpc",
              "Product": "aakash-test-player",
              "kubernetes.io/cluster/aakash-test-player-prod": "shared"
            }
          }
        }
      ]
    }
  ]
}